# bazel-monorepo-template

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
apps/web-nextjs/: BUILD.bazel  package.json  tsconfig.json
apps/web-nextjs/app/: BUILD.bazel  globals.css  layout.tsx  page.tsx
